v4.2.1 (work in progress)
     * ...

v4.2.0 2025-06-11
     * Add ncmat2endf functionality as a CLI script ncrystal_ncmat2endf and
       Python API access in the NCrystal.ncmat2endf module (github issue
       #183). This new feature allows for automatic export of NCrystal models
       into the ENDF-6 format. This ENDF (Evaluated Nuclear Data File) format is
       the traditional data format used in the Nuclear Data community, and
       ncmat2endf thus exists as a service to users of any nuclear radiation
       transport codes that do not currently have a direct integration with
       NCrystal, but who nonetheless wishes to take advantage of the material
       composition tools and larger data library of NCrystal.  For more
       information about this exciting new feature, please refer to the wiki
       page at https://github.com/mctools/ncrystal/wiki/ncmat2endf .
     * Remove upper pinning on ASE version which had been needed until ASE
       3.25.0 was released due to https://gitlab.com/ase/ase/-/issues/1597.
     * NCMATComposer.set_dyninfo_scatknl now supports new keyword argument
       "trim_edges", which if set will cause any rows or columns at the edge of
       the S(alpha,beta) table consisting strictly of zeroes to be trimmed off
       (with the exception that the lower alpha-edge is almost left alone).
     * Add safeguard against rare FPE with what looks like an issue with the
       Intel OneAPI compiler during integration of S(alpha,beta).
     * Support longer tests in tests/scripts dir. Those tests with filenames
       starting with "long_" will now only be enabled under certain
       conditions. Depending on the context, this can be done by in various
       manners. If using CMake+CTest, set -DNCRYSTAL_TEST_ENABLE_LONG=ON. If
       using the simplebuild developer mode, add the option --long to any of the
       ncdevtool sb* commands. Finally, if using ncrystal-verify, use the new
       --long flag.